# PTCGP-Aladin-decryptor

./: .gitignore  Cargo.toml  README.md
aladin-app/: Cargo.toml
aladin-app/src/: app.rs  main.rs  worker.rs
aladin-app/src/ui/: controls_panel.rs  device_panel.rs  mod.rs  progress_panel.rs  theme.rs
aladin-core/: Cargo.toml
aladin-core/src/: adb.rs  ali2.rs  crypto.rs  lib.rs  pipeline.rs  state.rs
