[package]
name = "aladin-app"
version = "0.1.0"
edition = "2021"
description = "Desktop GUI for decrypting Pokemon TCGP .aladin files via ADB"
license = "MIT"

[dependencies]
aladin-core = { path = "../aladin-core" }
eframe = "0.29"
egui = "0.29"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
