[package]
name = "aladin-core"
version = "0.1.0"
edition = "2021"
description = "Core decryption library for Pokemon TCGP .aladin files (custom ChaCha20 / ACP)"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
